--- a/python-package/Local Ancestry Example.ipynb
+++ b/python-package/Local Ancestry Example.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This tutorial illustrate a simple usage of Loter for local ancestry inference."
+    "This tutorial illustrates a simple usage of Loter for local ancestry inference."
    ]
   },
   {
@@ -13,7 +13,7 @@
    "source": [
     "## Table of Contents\n",
     "* [I) Local Installation](#local_installation)\n",
-    "* [III) Quick overview](#loter_usage)\n",
+    "* [II) Quick overview](#loter_usage)\n",
     "* [III) Running Loter from VCF Files](#vcf)\n"
    ]
   },
@@ -314,7 +314,9 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import loter.locanc.local_ancestry as lc\n",
@@ -432,7 +434,9 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def vcf2npy(vcfpath):\n",
@@ -458,7 +462,9 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "ceu_hap = vcf2npy('../data/ceu.vcf')\n",
@@ -570,7 +576,9 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "np.savetxt(\"result_mex.txt\", mex_admixed, fmt=\"%i\")"
