Write 3-way admixture

--- a/python-package/Local Ancestry Example.ipynb
+++ b/python-package/Local Ancestry Example.ipynb
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -183,7 +183,7 @@
        "(88, 50000)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -205,7 +205,7 @@
        "(100, 50000)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -584,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -627,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -635,10 +635,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.colorbar.Colorbar at 0x1154b0eb8>"
+       "<matplotlib.colorbar.Colorbar at 0x11e6913c8>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -646,7 +646,7 @@
      "data": {
       "image/png": "iVBORw0KGgoAAAANSUhEUgAAAWYAAAD8CAYAAABErA6HAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAGJpJREFUeJzt3W2sXdV95/Hvj2sTMtdOMHXiurapychNYlUBMleGDqiC\nMCEmUxVUjTK4U7AQkV8MqNAJaoFKZUZ9wzwUlShMPVawoCoPyRQsaESDjEPFRCWADQbjp+A4TrFj\nuDKkMW3VgH1/82Lvmx5u7jn7nHvPPd5n5/eRts4+e62z11o8/L289lpryzYREVEfp53qCkRExPsl\nMEdE1EwCc0REzSQwR0TUTAJzRETNJDBHRNRMAnNERAVJKyQ9LWmPpN2Sbpomz3+S9IqkXZL+VtK5\nLWlrJe2XdEDSrZXlZR5zRERnkpYCS22/KGkhsAO4yvaeljz/Fthr+0eSrgD+q+0LJI0A3wU+CxwG\nXgDWtf52qvSYIyIq2D5q+8Xy/B1gL7BsSp6/tf2j8ut3gOXl+RrggO2Dtt8FHgau7FTevNlUVtJa\n4G5gBPiq7Ts75R9ZMOp5i86aTZER8XPi3cOHj9n+yGzu8blLR/3W2ycr8+145Se7gX9uubTJ9qbp\n8kpaCZwPPNfhltcDf12eLwNeb0k7DFzQqT4zDsxl9/weWrrnkh7v1D2ft+gsfulLN8+0yIj4OXLo\n9275wWzv8dbbJ3n+ybMr840sfe2fbY9V5ZO0AHgEuNn28TZ5LqUIzBf3WN2fmk2P+afd87Iyk93z\ntoE5ImKQDEww0Zd7SZpPEZQfsP1omzyfAr4KXGH7rfLyEWBFS7bl5bW2ZhOYu+qeS9oAbAAYWbRo\nFsVFRPTGmPdcPZRRRZKAeyke7t3VJs/ZwKPANba/25L0ArBK0jkUAflq4Lc7lTerMeZulOM0mwA+\nsGJFpoBExED1qcd8EXANsEvSzvLa7cDZALY3An8E/ALwv4s4zgnbY7ZPSLoReJLiedxm27s7FTab\nwNxz9zwiYpCMOdmHKcG2vw2oIs8XgS+2SXsCeKLb8mYzXe6n3XNJp1N0zx+fxf0iIvpuAlcedTPj\nHvNMuucREYNk4GQNA2+VWY0x99o9j4gYtDr2iKvM+cO/iIhTxcB7Q7jtRAJzRDSW8c/fUEZERK0Z\nTg5fXE5gjojmKlb+DZ8E5ohoMHGy8/TjWkpgjojGKh7+JTBHRNRGMY85gTkiolYm0mOOiKiP9Jgj\nImrGiJND+Aa9BOaIaLQMZURE1IgR73rkVFejZwnMEdFYxQKTDGVERNRKHv5FRNSILU56+HrMw1fj\niIgeTKDKo4qkFZKelrRH0m5JN02T5xOSnpX0E0m3TEk7JGmXpJ2StleVlx5zRDRW8fCvL2HuBPAl\n2y9KWgjskLTV9p6WPG8Dvwtc1eYel9o+1k1h6TFHRGNNPvyrOirvYx+1/WJ5/g6wF1g2Jc+47ReA\n92Zb7wTmiGi0k1bl0QtJK4Hzged6+JmBpyTtkLShKnOGMiKisXpY+bd4ytjvJtubpmaStAB4BLjZ\n9vEeqnKx7SOSPgpslbTP9jPtMicwR0SjTXQ3K+OY7bFOGSTNpwjKD9h+tJc62D5Sfo5L2gKsAdoG\n5gxlRERjFZsYnVZ5VJEk4F5gr+27eqmDpNHygSGSRoHLgVc7/SY95ohoLCPe68+S7IuAa4BdknaW\n124HzgawvVHSLwLbgQ8BE5JuBlYDi4EtRWxnHvCg7W92KiyBOSIay6YvC0xsfxs6T3i2/QawfJqk\n48C5vZSXwBwRDdbdApK6SWCOiMYy/ekxD1oCc0Q0WjbKj4ioEaNslB8RUScG3uvPXhkDNXw1jojo\nmrIfc0REnZiuV/7VSgJzRDRaeswRETViKz3miIg6KR7+5S3ZERE1Mpzv/EtgjojGKh7+ZYw5IqJW\nsvIvIqJGhnXlX+UfJZI2SxqX9GrLtbMkbZX0Wvm5aG6rGRExM/14GeugdVOj+4C1U67dCmyzvQrY\nVn6PiKgVG96bOK3yqJvKGpUvDHx7yuUrgfvL8/uBq/pcr4iIWSuGMk6rPOpmpmPMS2wfLc/fAJa0\ny1i+qnsDwMiijHhExGAN48q/Wf9RYdsUs1LapW+yPWZ7bGR0dLbFRUR0bXK6XNVRNzMNzG9KWgpQ\nfo73r0oREf3Sn6EMSSskPS1pj6Tdkm6aJs8nJD0r6SeSbpmStlbSfkkHJFU+k5tpYH4cWF+erwce\nm+F9IiLm1ET53r9ORxdOAF+yvRq4ELhB0uoped4Gfhf4X60XJY0A9wBXULw1e900v32fbqbLPQQ8\nC3xc0mFJ1wN3Ap+V9Brw78rvERG1UszKGKk8qu/jo7ZfLM/fAfYCy6bkGbf9AvDelJ+vAQ7YPmj7\nXeBhigkUbVU+/LO9rk3SZVW/jYg4lXpYYLJY0vaW75tsb5ouo6SVwPnAc11WYxnwesv3w8AFnX6Q\nlX8R0WhdDlUcsz1WlUnSAuAR4Gbbx2dbt3YSmCOisfq5iZGk+RRB+QHbj/bw0yPAipbvy8trbSUw\nR0Sj9WMBiSQB9wJ7bd/V489fAFZJOociIF8N/HanHyQwR0Rj2eJEf1b2XQRcA+yStLO8djtwdlGO\nN0r6RWA78CFgQtLNwGrbxyXdCDwJjACbbe/uVFgCc0Q0Wj+GMmx/GzoPVtt+g2KYYrq0J4Anui0v\ngTkiGisb5UdE1FACc0REjQzrRvkJzBHRaF3OY66VBOaIaCwbTtRwI/wqCcwR0WgZyoiIqJGMMUdE\n1JATmCMi6iUP/yIiasTOGHNERM2Ik5mVERFRLxljjoiokeyVERFRNy7GmYdNAnNENFpmZURE1Ijz\n8C8ion4ylBERUTPDOCtj+Pr4ERFdsovAXHVUkbRC0tOS9kjaLemmafJI0pclHZD0iqRPt6QdkrRL\n0k5J26vKS485IhqtT9PlTgBfsv2ipIXADklbbe9pyXMFsKo8LgD+rPycdKntY90Ulh5zRDSaXX1U\n38NHbb9Ynr8D7AWWTcl2JfDnLnwHOFPS0pnUOYE5IhrLiImJ0yoPYLGk7S3Hhnb3lLQSOB94bkrS\nMuD1lu+H+ZfgbeApSTs63XtShjIiotG6nJRxzPZYVSZJC4BHgJttH++hGhfbPiLpo8BWSftsP9Mu\nc3rMEdFcfXr4ByBpPkVQfsD2o9NkOQKsaPm+vLyG7cnPcWALsKZTWQnMEdFs7uKoIEnAvcBe23e1\nyfY4cG05O+NC4Me2j0oaLR8YImkUuBx4tVN5GcqIiEbr0zzmi4BrgF2SdpbXbgfOLsrwRuAJ4PPA\nAeCfgOvKfEuALUVsZx7woO1vdiosgTkiGsvAxMTsA7Ptb0PnTTdsG7hhmusHgXN7KS+BOSKay8AQ\nrvxLYI6IRsteGRERdZPAHBFRJ91Ph6uTBOaIaLb0mCMiasTgPszKGLTKBSbttruTdJakrZJeKz8X\nzX11IyJ6pS6Oeulm5d/kdnergQuBGyStBm4FttleBWwrv0dE1EsfVv4NWmVg7rDd3ZXA/WW2+4Gr\n5qqSEREzNoSBuacx5inb3S2xfbRMeoNi2eF0v9kAbAAYWZTRjogYoCFdYNL1JkadtrsrlyJO++eO\n7U22x2yPjYyOzqqyERG96sdG+YPWVWBus93dm5O785ef43NTxYiIWZhQ9VEz3czKaLfd3ePA+vJ8\nPfBY/6sXETE7cvVRN92MMbfb7u5O4OuSrgd+AHxhbqoYETFDNX24V6UyMFdsd3dZf6sTEdFPGsqH\nf1n5FxHN1sQec0TEUJs41RXoXQJzRDRX0+cxR0QMo37Mymi3Z9CUPJL0ZUkHJL0i6dMtaWsl7S/T\nKrevSGCOiGbrz5LsdnsGtboCWFUeG4A/A5A0AtxTpq8G1k3z2/dJYI6IqNBhz6BWVwJ/7sJ3gDPL\nxXdrgAO2D9p+F3i4zNtWAnNENFqXQxmLJW1vOTa0vd/79wxqtQx4veX74fJau+tt5eFfRDSX6XbJ\n9THbY1WZOu0Z1E8JzBHRbH2ax9xmz6BWR4AVLd+Xl9fmt7neVoYyIqLR+jQro92eQa0eB64tZ2dc\nCPy43Br5BWCVpHMknQ5cXeZtKz3miGi2/vSY2+0ZdDaA7Y3AE8DngQPAPwHXlWknJN0IPAmMAJtt\n7+5UWAJzRDRbHwJzxZ5Bk3kM3NAm7QmKwN2VBOaIaKy6butZJYE5IpqthhvhV0lgjohGS485IqJu\nEpgjImokY8wRETWUwBwRUS8awo3ys/IvIqJm0mOOiGbLUEZERI3k4V9ERA0lMEdE1EwCc0REfYjh\nnJWRwBwRzZUx5oiIGkpgjoiomQTmiIh6yVBGRETdDGFgzpLsiGguF7Myqo5uSNosaVzSq23SF0na\nIukVSc9L+tWWtEOSdknaKWl7VVkJzBHRbO7i6M59wNoO6bcDO21/CrgWuHtK+qW2z7M9VlVQAnNE\nNNrke/86Hd2w/Qzwdocsq4FvlXn3ASslLZlJnROYI6LZuusxL5a0veXYMIOSXgZ+C0DSGuCXgeUt\ntXhK0o5u7p2HfxHRXN0PVRzrZoihwp3A3ZJ2AruAl4CTZdrFto9I+iiwVdK+sgc+rQTmiGgsMbjp\ncraPA9cBSBLwfeBgmXak/ByXtAVYA7QNzBnKiIhG69cYc2U50pmSTi+/fhF4xvZxSaOSFpZ5RoHL\ngWlndkxKjzkimq1/gfch4BKK8ejDwB3AfADbG4FPAvdLMrAbuL786RJgS9GJZh7woO1vdiqrMjBL\nOoOiy/2BMv9f2r5D0lnA14CVwCHgC7Z/1EtDIyLmXJ8Cs+11FenPAr8yzfWDwLm9lNXNUMZPgM/Y\nPhc4D1gr6ULgVmCb7VXAtvJ7RER9dDGMUccl25WB2YV/KL/OLw8DVwL3l9fvB66akxpGRMxG/xaY\nDExXD/8kjZRTQMaBrbafA5bYPlpmeYNiHCUiolb6tSR7kLoKzLZP2j6PYrL0mtY14GV62z93JG2Y\nnLR98h//cdYVjojoRSOHMlrZ/nvgaYr14m9KWgpQfo63+c0m22O2x0ZGR2db34iI7nUzjDGMgVnS\nRySdWZ5/EPgssA94HFhfZlsPPDZXlYyImLEhDMzdzGNeSjE3b4QikH/d9jckPQt8XdL1wA+AL8xh\nPSMiejbIlX/9VBmYbb8CnD/N9beAy+aiUhER/aKJ4YvMWfkXEc1V06GKKgnMEdFojRzKiIgYagnM\nERH1kh5zRETdJDBHRNSI67nkukoCc0Q0VmPnMUdEDDUPX2ROYI6IRkuPOSKiToZ0gUlexhoRjdav\n/ZglbZY0LmnaF6lKWiRpi6RXJD3fuj2ypLWS9ks6IKnybU8JzBHRaH3cKP8+ii2P27kd2Gn7U8C1\nwN1QvGgEuAe4AlgNrJO0ulNBCcwR0VymePhXdXRzK/sZ4O0OWVYD3yrz7gNWSloCrAEO2D5o+13g\nYYpX87WVwBwRjdblG0wWT75pqTw2zKCol4HfApC0Bvhlirc+LQNeb8l3uLzWVh7+RUSzddchPmZ7\nbJYl3QncXb4fdRfwEnByJjdKYI6IxhrkAhPbx4HrACQJ+D5wEPggsKIl63LgSKd7ZSgjIprLRhPV\nRz9IOlPS6eXXLwLPlMH6BWCVpHPK9KspXs3XVnrMEdFsfeoxS3oIuIRiPPowcAcwH8D2RuCTFK/h\nM7AbuL5MOyHpRuBJYATYbHt3p7ISmCOi0fo1lGF7XUX6s8CvtEl7Anii27ISmCOiuQzknX8RETUz\nfHE5gTkimi2bGEVE1Ey/Zl0MUgJzRDTXkO4ul8AcEY1VLDAZvsicwBwRzZZ3/kVE1Et6zBERdZIx\n5oiIuunfXhiDlMAcEc2WoYyIiBpxT6+Oqo0E5ohotvSYIyJqZvjicgJzRDSbJoZvLCOBOSKay2SB\nSUREnQhngUlERO0MYWDOy1gjotns6qMLkjZLGpf0apv0D0v6K0kvS9ot6bqWtEOSdknaKWl7VVkJ\nzBHRXJNjzFVHd+4D1nZIvwHYY/tcipe2/knLW7MBLrV9nu2xqoK6DsySRiS9JOkb5fezJG2V9Fr5\nuajbe0VEDIomJiqPbth+Bni7UxZgoSQBC8q8J2ZS5156zDcBe1u+3wpss70K2FZ+j4iokS6GMfo3\nBv0V4JPAD4FdwE22J6O+gack7ZC0oepGXQVmScuBfw98teXylcD95fn9wFXd1T0iYkBMt4F5saTt\nLUdl8JzG54CdwC8B5wFfkfShMu1i2+cBVwA3SPr1TjfqdlbGnwK/DyxsubbE9tHy/A1gyXQ/LBu4\nAWBkUUY7ImLAuhupONbN2G+F64A7bRs4IOn7wCeA520fAbA9LmkLsAZ4pt2NKnvMkn4DGLe9o12e\nsiLT/n3A9ibbY7bHRkZHq4qLiOgr2ZVHn/wdcBmApCXAx4GDkkYlLSyvjwKXA9PO7JjUTY/5IuA3\nJX0eOAP4kKS/AN6UtNT2UUlLgfEZNyciYq70KfBKeohitsViSYeBO4D5RRHeCPwxcJ+kXRSvG/wD\n28ckfQzYUjwTZB7woO1vdiqrMjDbvg24razYJcAttn9H0v8E1gN3lp+P9d7UiIg5ZMPJ/qzJtr2u\nIv2HFL3hqdcPAuf2UtZsVv7dCXxd0vXAD4AvzOJeERFzYwhX/vUUmG3/DfA35flblOMpERG11fTA\nHBExVAzknX8REXVi8PDt+5nAHBHNZfr28G+QEpgjotkyxhwRUTMJzBERddLXTYoGJoE5IprLQF7G\nGhFRM+kxR0TUSf+WZA9SAnNENJfBmcccEVEzWfkXEVEzGWOOiKgRO7MyIiJqJz3miIg6MT558lRX\nomcJzBHRXNn2MyKihoZwulzlW7IjIoaVAU+48uiGpM2SxiVN+4ZrSR+W9FeSXpa0W9J1LWlrJe2X\ndEDSrVVlJTBHRHO53Ci/6ujOfcDaDuk3AHtsn0vxNu0/kXS6pBHgHuAKYDWwTtLqTgVlKCMiGq1f\nD/9sPyNpZacswEJJAhYAbwMngAuAA+XbspH0MHAlsKfdjQYamN89fPgfDv3eLfsHWeaALAaOnepK\n9FkT2wTNbFcT2wTw8dne4B1+9ORT/svFXWQ9Q9L2lu+bbG/qsbivAI8DPwQWAv/R9oSkZcDrLfkO\nUwTrtgbdY95ve2zAZc45Sdub1q4mtgma2a4mtgmKds32HrY7DT302+eAncBngH8NbJX0/2Zyo4wx\nR0T0x3XAoy4cAL4PfAI4Aqxoybe8vNZWAnNERH/8HXAZgKQlFEMxB4EXgFWSzpF0OnA1xZBHW4Me\nyuh1zGZYNLFdTWwTNLNdTWwT1Kxdkh6imG2xWNJh4A5gPoDtjcAfA/dJ2gUI+APbx8rf3gg8CYwA\nm23v7liWh3AdeUREk2UoIyKiZhKYIyJqZiCBudfliKfCdMstJZ0laauk18rPRS1pt5Xt2S/pcy3X\n/42kXWXal8vJ5kj6gKSvldefq5io3q82rZD0tKQ95RLRm4a9XZLOkPR8y7LX/zbsbZrSvhFJL0n6\nRlPaJelQWZ+dk1PgmtCuOWV7Tg+Kwe7vAR8DTgdeBlbPdbkzqOevA58GXm259j+AW8vzW4H/Xp6v\nLtvxAeCcsn0jZdrzwIUUg/9/DVxRXv/PwMby/GrgawNo01Lg0+X5QuC7Zd2Htl1l+QvK8/nAc2W9\nhrZNU9r3X4AHgW804b/BsqxDwOIp14a+XXP6z2wA/1J+DXiy5fttwG2nuuFt6rqS9wfm/cDS8nwp\nxQKZn2kDxdPWXyvz7Gu5vg74P615yvN5FCu1NOD2PQZ8tintAv4V8CLFKqqhbxPF/NZtFAsUJgNz\nE9p1iJ8NzEPfrrk8BjGUMd1yxGUDKLcfltg+Wp6/ASwpz9u1aVl5PvX6+35j+wTwY+AX5qbaP6v8\n6935FD3MoW5X+df9ncA4sNX20Lep9KfA7wOtu+o0oV0GnpK0Q9KG8loT2jVnsolRl2xb0lDOLZS0\nAHgEuNn28XJoDhjOdtk+CZwn6Uxgi6RfnZI+dG2S9BvAuO0dki6ZLs8wtqt0se0jkj5KsUx5X2vi\nELdrzgyix9zzcsQaeVPSUoDyc7y83q5NR8rzqdff9xtJ84APA2/NWc1LkuZTBOUHbD9aXh76dgHY\n/nvgaYqtGIe9TRcBvynpEPAw8BlJf8HwtwvbR8rPcWALsIYGtGsuDSIw97wcsUYeB9aX5+spxmgn\nr19dPg0+B1gFPF/+1ey4pAvLJ8bXTvnN5L3+A/Atl4Nic6Wsw73AXtt3tSQNbbskfaTsKSPpgxRj\n5vuGuU0Atm+zvdz2Sor/R75l+3eGvV2SRiUtnDwHLgdeHfZ2zblBDGQDn6eYEfA94A9P9cB6mzo+\nBBwF3qMYv7qeYpxqG/Aa8BRwVkv+Pyzbs5/y6XB5fYziP7zvUWwDOLm68gzg/wIHKJ4uf2wAbbqY\nYnzvFYpdr3aW/y6Gtl3Ap4CXyja9CvxReX1o2zRNGy/hXx7+DXW7KGZjvVweuyf//x/2ds31kSXZ\nERE1k5V/ERE1k8AcEVEzCcwRETWTwBwRUTMJzBERNZPAHBFRMwnMERE18/8BZFokTbpPifMAAAAA\nSUVORK5CYII=\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x11534c4a8>"
+       "<matplotlib.figure.Figure at 0x11bb85f98>"
       ]
      },
      "metadata": {},
@@ -695,6 +695,26 @@
    "source": [
     "Not that it is not currently possible to account for phasing errors in Loter when there are more than two ancestral populations. Haplotypic length of ancestry tracts will be affected and should not be used when there are more than 2 ancestral populations. Other statistics at the scale of genotypes (mean ancestry in the population, mean ancestry per individual) are accurately inferred."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "np.savetxt(\"result_3wayadmixture.txt\", res_no_impute[0], fmt=\"%i\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
