rewrite README and add details in tutorial notebook

--- a/python-package/Local_Ancestry_Example.ipynb
+++ b/python-package/Local_Ancestry_Example.ipynb
@@ -168,7 +168,7 @@
    "source": [
     "Haplotype data are generally stored in VCF format. We show here how lo load data from such files to be used in Loter.\n",
     "\n",
-    "To load a VCF, we use [scikit allel](https://scikit-allel.readthedocs.io/en/latest/#)."
+    "To load a VCF, we use [scikit allel](https://scikit-allel.readthedocs.io/en/latest/#). To install it, you can run `pip install scikit-allel`."
    ]
   },
   {
@@ -185,7 +185,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`vcf2npy` convert a VCF File to a numpy matrix with 0, 1 and 2."
+    "`vcf2npy` convert a VCF File to a numpy matrix with values 0, 1 and 2."
    ]
   },
   {
@@ -222,9 +222,9 @@
    "source": [
     "import os\n",
     "\n",
-    "ceu_hap = vcf2npy(os.path.join(os.pardir, 'data', 'ceu.vcf'))\n",
-    "yri_hap = vcf2npy(os.path.join(os.pardir, 'data', 'yri.vcf'))\n",
-    "mex_hap = vcf2npy(os.path.join(os.pardir, 'data', 'mex.vcf'))"
+    "H_ceu = vcf2npy(os.path.join(os.pardir, 'data', 'ceu.vcf'))\n",
+    "H_yri = vcf2npy(os.path.join(os.pardir, 'data', 'yri.vcf'))\n",
+    "H_mex = vcf2npy(os.path.join(os.pardir, 'data', 'mex.vcf'))"
    ]
   },
   {
@@ -261,7 +261,7 @@
    "source": [
     "import loter.locanc.local_ancestry as lc\n",
     "\n",
-    "res_loter = lc.loter_smooth(l_H=[ceu_hap, yri_hap], h_adm=mex_hap, num_threads=8) ## set the number of threads"
+    "res_loter = lc.loter_smooth(l_H=[H_ceu, H_yri], h_adm=H_mex, num_threads=8) ## set the number of threads"
    ]
   },
   {
@@ -278,7 +278,7 @@
     }
    ],
    "source": [
-    "print(res_loter.shape) ## 2*23 haplotype origins and 50000 SNPs "
+    "print(res_loter.shape) # 2*23 haplotype and 50000 SNPs "
    ]
   },
   {
@@ -292,7 +292,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We display admixture chunks. Chunks of 0 correspond to CEU (first element of the list) and chunks of 1 correspond to YRI (second element of the list)."
+    "For data visualization, we use the `matplotlib` package. To install it, you can run `pip install matplotlib`.\n",
+    "\n",
+    "We display admixture chunks for each admixed haplotypes (in rows) and SNPs (in columns). Chunks of 0 correspond to CEU (first element of the list) and chunks of 1 correspond to YRI (second element of the list)."
    ]
   },
   {
