fix minor issue in notebook + include markdown version

--- a/python-package/Local_Ancestry_Example.ipynb
+++ b/python-package/Local_Ancestry_Example.ipynb
@@ -72,9 +72,9 @@
     "import os\n",
     "import numpy as np\n",
     "\n",
-    "H_ceu = np.load(os.path.join(os.pardir, \"data\", \"H_ceu.npy\"))\n",
-    "H_yri = np.load(os.path.join(os.pardir, \"data\", \"H_yri.npy\"))\n",
-    "H_mex = np.load(os.path.join(os.pardir, \"data\", \"H_mex.npy\"))"
+    "H_ceu = np.load(os.path.join(os.pardir, \"data\", \"H_ceu.npy\"), allow_pickle=True)\n",
+    "H_yri = np.load(os.path.join(os.pardir, \"data\", \"H_yri.npy\"), allow_pickle=True)\n",
+    "H_mex = np.load(os.path.join(os.pardir, \"data\", \"H_mex.npy\"), allow_pickle=True)"
    ]
   },
   {
@@ -578,7 +578,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
