--- a/python-package/Local_Ancestry_Example.ipynb
+++ b/python-package/Local_Ancestry_Example.ipynb
@@ -399,8 +399,8 @@
     "The function `loter.locanc.local_ancestry.loter_smooth` implements the method with both bagging and phase correction. Besides `l_H` and `h_adm` (c.f. [previously](#run_loter)), it takes several additional hyper-parameters:\n",
     "* `range_lambda`: list or 1-d array of candidate values (>0) for $\\lambda$\n",
     "* `threshold`: smoothing parameter in [0,1] for the phase correction module (=1 corresponds to no smoothing)\n",
-    "* `rate_vote`: bagging vote parameter in [0,1]\n",
-    "* `nb_bagging`: number of resampling in the bagging (positive interger)\n",
+    "* `rate_vote`: minimal bagging vote parameter in [0,1] (SNP with a majority vote lower than this threshold are considered indecisive and reassigned based on the reference population for nearest SNP with decisive vote)\n",
+    "* `nb_bagging`: number of resampling in the bagging (positive integer)\n",
     "* `num_threads`: number of threads for parallel computations (requires OpenMP, c.f. [README.md](../README.md))"
    ]
   },
@@ -412,8 +412,10 @@
    "source": [
     "import loter.locanc.local_ancestry as lc\n",
     "\n",
-    "res_loter = lc.loter_smooth(l_H=[H_ceu, H_yri], h_adm=H_mex, range_lambda=np.arange(1.5, 5.5, 0.5),\n",
-    "                            threshold=0.90, rate_vote=0.5, nb_bagging=20, num_threads=8)"
+    "res_loter = lc.loter_smooth(\n",
+    "    l_H=[H_ceu, H_yri], h_adm=H_mex, range_lambda=np.arange(1.5, 5.5, 0.5),\n",
+    "    threshold=0.90, rate_vote=0.5, nb_bagging=20, num_threads=8\n",
+    ")"
    ]
   },
   {
@@ -431,7 +433,7 @@
     "\n",
     "Besides `l_H` and `h_adm` (c.f. [previously](#run_loter)), it takes several additional hyper-parameters:\n",
     "* `range_lambda`: list or 1-d array of candidate values (>0) for $\\lambda$\n",
-    "* `rate_vote`: bagging vote parameter in [0,1]\n",
+    "* `rate_vote`: irrelevant in this mode\n",
     "* `nb_bagging`: number of resampling in the bagging (positive interger)\n",
     "* `num_threads`: number of threads for parallel computations (requires OpenMP, c.f. [README.md](../README.md))"
    ]
@@ -444,8 +446,10 @@
    "source": [
     "import loter.locanc.local_ancestry as lc\n",
     "\n",
-    "res_loter = lc.loter_local_ancestry(l_H=[H_ceu, H_yri], h_adm=H_mex, range_lambda=np.arange(1.5, 5.5, 0.5),\n",
-    "                                    rate_vote=0.5, nb_bagging=20, num_threads=8)"
+    "res_loter = lc.loter_local_ancestry(\n",
+    "    l_H=[H_ceu, H_yri], h_adm=H_mex, range_lambda=np.arange(1.5, 5.5, 0.5),\n",
+    "    nb_bagging=20, num_threads=8\n",
+    ")"
    ]
   },
   {
@@ -492,8 +496,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "res_impute, res_no_impute = lc.loter_local_ancestry(l_H=[H_ceu, H_yri], h_adm=H_mex, range_lambda=np.arange(1.5, 5.5, 0.5),\\n\",\n",
-    "                                                    rate_vote=0.5, nb_bagging=20, num_threads=8, default=False)"
+    "res_impute, res_no_impute = lc.loter_local_ancestry(\n",
+    "    l_H=[H_ceu, H_yri], h_adm=H_mex, range_lambda=np.arange(1.5, 5.5, 0.5),\n",
+    "    rate_vote=0.5, nb_bagging=20, num_threads=8, default=False\n",
+    ")"
    ]
   },
   {
@@ -522,7 +528,9 @@
     "* g((2, 2)) = (2 * 3)/2 + 2 = 5\n",
     "\n",
     "So genotypic ancestry compresses the pair information into one single number.\n",
-    "It is useful for the computation of the genotypic ancestry error rate.\n"
+    "It is useful for the computation of the genotypic ancestry error rate.\n",
+    "\n",
+    "In this mode, the `rate_vote` input parameter is the minimal bagging vote parameter in [0,1]. The SNP with a majority vote lower than this threshold are considered indecisive and reassigned based on the reference population for nearest SNP with decisive vote.\n"
    ]
   },
   {
